fixed mobile alignment and h3

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -282,6 +282,20 @@ body {
         background-image: url('/images/trex-logow.svg');
         background-size: 60px;
       }
+      .navbar .navbar-brand img {
+        height: 35px;
+      }
+      h3 {
+        font-size: 25px;
+        font-family: $regular !important;
+        text-align: left;
+      }
+      @media only screen and ( min-width: 600px ) {
+        h3 { 
+          text-align: justify; 
+        }
+      
+   }
       /*.navbar {
         position: fixed; 
         top: 0; 
@@ -289,7 +303,7 @@ body {
         transition: top 0.3s; /* Transition effect when sliding down (and up) 
       } */
       div.featured-box{
-        margin: 0 13px 2rem 15px;
+        margin: 0 35px 2.8rem 15px;
         box-shadow: blue 0px 0px 0px 2px inset, rgb(255, 255, 255) 10px -10px 0px -3px, rgb(31, 193, 27) 10px -10px, rgb(255, 255, 255) 20px -20px 0px -3px, rgb(255, 217, 19) 20px -20px, rgb(255, 255, 255) 30px -30px 0px -3px, rgb(255, 156, 85) 30px -30px, rgb(255, 255, 255) 40px -40px 0px -3px, rgb(255, 85, 85) 40px -40px;
       }
   }
